[tool.poetry]
name = "encuesta-egresados"
version = "0.1.0"
description = ""
authors = ["Alejandro Aguayo-Ortiz <aaguayoo92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "1.10.0"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
